--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,12 @@
-.vscode/**
-.vscode-test/**
-out/test/**
-test/**
-src/**
-**/*.map
+.github
 .gitignore
+.idea
+.test-extensions
+.trash~
+.vscode
+out/test
+out/*.js.map
+settings.json
+src
+test-resources
 tsconfig.json
-vsc-extension-quickstart.md
