--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "apicurio-registry-explorer",
-    "displayName": "Apicurio registry",
-    "description": "Explore Apicurio registry content.",
+    "displayName": "Apicurio Registry Explorer",
+    "description": "Explore Apicurio Registry content.",
     "version": "1.0.1",
-    "publisher": "apicurio",
+    "publisher": "Apicurio",
     "author": {
         "name": "Apicurio",
         "url": "https://www.apicur.io/"
@@ -14,7 +14,7 @@
         "url": "https://github.com/Apicurio/apicurio-registry-vscode-plugin.git"
     },
     "engines": {
-        "vscode": "^1.57.0"
+        "vscode": "^1.82.0"
     },
     "categories": [
         "Visualization"
@@ -222,15 +222,22 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "lint": "eslint . --ext .ts,.tsx"
+        "lint": "eslint . --ext .ts,.tsx",
+        "test": "extest setup-and-run './out/test/*-test.js' --code_settings settings.json --extensions_dir .test-extensions",
+        "test-no-timeout": "extest setup-and-run './out/test/*-test.js' --code_settings settings.json --extensions_dir .test-extensions --mocha_config './src/test/.mocharc-debug.js'"
     },
     "devDependencies": {
-        "@types/node": "^17.0.12",
-        "@types/vscode": "^1.52.0",
-        "@typescript-eslint/eslint-plugin": "^5.10.1",
-        "eslint": "^8.7.0",
+        "@types/chai": "^4.3.11",
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^18.19.25",
+        "@types/vscode": "^1.82.0",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "chai": "^4.4.1",
+        "eslint": "^8.57.0",
+        "mocha": "^10.3.0",
         "prettier": "3.2.4",
-        "typescript": "^4.5.5"
+        "typescript": "^5.3.3",
+        "vscode-extension-tester": "^7.2.0"
     },
     "dependencies": {
         "http": "^0.0.1-security",
